# rosalina

./: Cargo.toml  powerpc-nintendo-wii.json  revolution.ld
.cargo/: config.toml
.github/workflows/: rust.yml
examples/: basic.rs  minimum.rs
src/: arch.rs  asm_runtime.rs  cache.rs  clock.rs  config.rs  exception.rs  exi.rs  gfx.rs  gx.rs  interrupts.rs  ios.rs  ipc.rs  isfs.rs  lib.rs  main.rs  mmio.rs  os.rs  pad.rs  si.rs  sram.rs  utils.rs  vi.rs  video.rs  wii.rs
src/drivers/: mod.rs  sd.rs
src/mmio/: ai.rs  cp.rs  dsp.rs  exi.rs  ipc.rs  pi.rs  si.rs  vi.rs
src/rt0/: cache.S  exception_handler.S  hw_init.S  init.S  mod.rs
