[package]
name = "rosalina"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bit_field = "0.10.1"
linked_list_allocator = "0.9.1"
spin = "0.9.3"
strum = { version = "0.24", default-features = false }
strum_macros = {version = "0.24", default-features = false }
voladdress = "1.2.1"
