[package]
name = "rosalina"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "s"
codegen-units = 1
panic = "abort"

[dependencies]
bit_field = "0.10.1"
linked_list_allocator = "0.10.4"
spin = "0.9.3"
voladdress = "1.2.1"
